Remove dmaap from models
Issue-ID: POLICY-4402
Change-Id: Icead1601984f463e557b969f2792f0f0aa05f060
Signed-off-by: rameshiyer27 <ramesh.murugan.iyer@est.tech>