@@ -1,6 +1,6 @@
 /*-
  * ============LICENSE_START=======================================================
- *  Copyright (C) 2019-2020 Nordix Foundation.
+ *  Copyright (C) 2019-2020, 2024 Nordix Foundation.
  *  Modifications Copyright (C) 2019 AT&T Intellectual Property. All rights reserved.
  * ================================================================================
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -21,7 +21,6 @@
 
 package org.onap.policy.models.sim.pdp.parameters;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
@@ -48,14 +47,13 @@ public class CommonTestData {
     public static final String POLICY_NAME = "onap.controllloop.operational.apex.BBS";
     public static final String POLICY_VERSION = "0.0.1";
     protected static final List<ToscaPolicyTypeIdentifierParameters> SUPPORTED_POLICY_TYPES =
-            Arrays.asList(getSupportedPolicyTypes(POLICY_NAME, POLICY_VERSION));
-    public static final List<TopicParameters> TOPIC_PARAMS = Arrays.asList(getTopicParams());
+        List.of(getSupportedPolicyTypes(POLICY_NAME, POLICY_VERSION));
+    public static final List<TopicParameters> TOPIC_PARAMS = List.of(getTopicParams());
     private static final String REST_SERVER_PASS = "zb!XztG34";
     private static final String REST_SERVER_USER = "healthcheck";
     private static final int REST_SERVER_PORT = 6969;
     private static final String REST_SERVER_HOST = "0.0.0.0";
     private static final boolean REST_SERVER_HTTPS = true;
-    private static final boolean REST_SERVER_AAF = false;
 
     public static final Coder coder = new StandardCoder();
 
@@ -79,8 +77,8 @@ public class CommonTestData {
     public static TopicParameters getTopicParams() {
         final TopicParameters topicParams = new TopicParameters();
         topicParams.setTopic("POLICY-PDP-PAP");
-        topicParams.setTopicCommInfrastructure("dmaap");
-        topicParams.setServers(Arrays.asList("message-router"));
+        topicParams.setTopicCommInfrastructure("kafka");
+        topicParams.setServers(List.of("localhost:9092"));
         return topicParams;
     }
 
@@ -126,7 +124,6 @@ public class CommonTestData {
     public Map<String, Object> getRestServerParametersMap(final boolean isEmpty) {
         final Map<String, Object> map = new TreeMap<>();
         map.put("https", REST_SERVER_HTTPS);
-        map.put("aaf", REST_SERVER_AAF);
 
         if (!isEmpty) {
             map.put("host", REST_SERVER_HOST);
